// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncomingLegacyCallToast /> renders disabled silenced button when call is forced to silent 1`] = `
<div
  aria-disabled="true"
  aria-label="Notifications silenced"
  class="mx_AccessibleButton mx_IncomingLegacyCallToast_iconButton mx_IncomingLegacyCallToast_unSilence mx_AccessibleButton_disabled"
  disabled=""
  role="button"
  tabindex="0"
/>
`;

exports[`<IncomingLegacyCallToast /> renders sound on button when call is silenced 1`] = `
<div
  aria-label="Sound on"
  class="mx_AccessibleButton mx_IncomingLegacyCallToast_iconButton mx_IncomingLegacyCallToast_unSilence"
  role="button"
  tabindex="0"
/>
`;

exports[`<IncomingLegacyCallToast /> renders when silence button when call is not silenced 1`] = `
<div
  aria-label="Silence call"
  class="mx_AccessibleButton mx_IncomingLegacyCallToast_iconButton mx_IncomingLegacyCallToast_silence"
  role="button"
  tabindex="0"
/>
`;
